<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--Header-->

    <TextView
        android:id="@+id/tv_connection_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:text="@string/ui_tv_activity_tracking"
        android:textColor="@color/uiTextColor"
        android:textSize="21sp" />
    <!--Header-->

    <!--Video Surface-->
    <TextureView
        android:id="@+id/tv_video_surface"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_gravity="center" />

    <!-- Aircraft location -->
    <LinearLayout
        android:id="@+id/ll_container_aircraft_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_label_ll_container_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/ui_tv_label_ll_container_state"
            android:textColor="@color/uiTextColor"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_state_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/ui_tv_state_longitude"
            android:textColor="@color/uiTextColor" />

        <TextView
            android:id="@+id/tv_state_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/ui_tv_state_latitude"
            android:textColor="@color/uiTextColor" />

        <TextView
            android:id="@+id/tv_state_altitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/ui_tv_state_altitude"
            android:textColor="@color/uiTextColor" />
    </LinearLayout>
    <!-- Aircraft location -->

    <!-- Camera settings -->
    <LinearLayout
        android:id="@+id/ll_container_camera_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="8dp"
        android:layout_toEndOf="@id/ll_container_aircraft_location"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_label_ll_container_camera_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/ui_tv_label_ll_container_camera_settings"
            android:textColor="@color/uiTextColor"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_video_settings_resolution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="Resolution:"
            android:textColor="@color/uiTextColor" />

        <TextView
            android:id="@+id/tv_video_settings_frame_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="Frame rate:"
            android:textColor="@color/uiTextColor" />
    </LinearLayout>
    <!--  Camera Settings  -->

    <!-- VideoDataCallback -->
    <LinearLayout
        android:id="@+id/ll_container_video_data_callback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_below="@id/ll_container_aircraft_location"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_label_ll_container_video_data_callback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/ui_tv_label_ll_container_video_data_callback"
            android:textColor="@color/uiTextColor"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_state_video_data_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="Registration:"
            android:textColor="@color/uiTextColor" />

        <TextView
            android:id="@+id/tv_state_video_data_callback_on_receive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="OnReceive:"
            android:textColor="@color/uiTextColor" />
    </LinearLayout>
    <!-- VideoDataCallback -->

    <!-- Video Codec Android SDK implementation -->
    <LinearLayout
        android:id="@+id/ll_container_video_data_callback_android_impl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_below="@id/ll_container_video_data_callback"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_label_ll_container_video_data_callback_android_impl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/ui_tv_label_ll_container_video_data_callback_android_impl"
            android:textColor="@color/uiTextColor"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_label_tv_video_data_callback_dequeue_input_buffer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/ui_tv_label_tv_video_data_callback_dequeue_input_buffer"
                android:textColor="@color/uiTextColor" />

            <TextView
                android:id="@+id/tv_video_data_callback_dequeue_input_buffer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="buffer"
                android:textColor="@color/uiTextColor" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_label_tv_video_data_callback_dequeue_output_buffer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/ui_tv_label_tv_video_data_callback_dequeue_output_buffer"
                android:textColor="@color/uiTextColor" />

            <TextView
                android:id="@+id/tv_video_data_callback_dequeue_output_buffer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="buffer"
                android:textColor="@color/uiTextColor" />
        </LinearLayout>
    </LinearLayout>
    <!-- Video Codec Android SDK implementation  -->
</RelativeLayout>